# why

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  plugin-setup.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: why.md
src/why/: __init__.py  cli.py  gh_collector.py  git_collector.py  linked_refs.py  parse_target.py  render.py
tests/: conftest.py  test_cli.py  test_git_collector.py  test_linked_refs.py  test_parse_target.py  test_render.py
